    This reproduces bug #403239.
  * pg_createcluster: If $LC_ALL is defined, fix $LANG to $LC_ALL. Servers
    prior to 8.2 get this wrong and fail over an invalid $LANG even if that is
    dominated by a valid $LC_ALL. Closes: #403239
  * Add Brazilian Portugese debconf translations. Thanks to André Luís Lopes!
    Closes: #403563

 -- Martin Pitt <mpitt@debian.org>  Tue, 19 Dec 2006 12:39:46 +0100

postgresql-common (69) unstable; urgency=medium

  * Urgency medium, only safe fixes and this needs to go into Etch due to
    first bug fix.
  * debian/supported_versions: Gracefully fall back on an unknown
    distribution, instead of failing package installation completely.
    Closes: #400628
  * debian/supported_versions: Some minor factorization.
  * Add Spanish debconf translations, thanks to Javier Fernández-Sanguino
    Peña! Closes: #402198
  * pg_createcluster: Add --locale and the various --lc_* options that initdb
    supports, and mention in POD that directly setting --encoding is not
    recommended. Closes: #395083
  * t/050_encodings.t: Use pg_createcluster's new --locale option in some test
    cases.
  * Make testsuite work with just one installed major version (mainly boils
    down to disabling upgrade tests).

 -- Martin Pitt <mpitt@debian.org>  Sat,  9 Dec 2006 14:37:42 +0100

postgresql-common (68) unstable; urgency=low

  * debian/supported-versions: Add Debian 4.0. Closes: #399978
  * debian/postgresql-common.postinst: Use adduser option --quiet for adding
    postgres to ssl-cert. Closes: #399979
  * pg_createcluster: Enable timestamps in log files by default. Other system
    log files have timestamps, too, and they are useful. Closes: #395554
  * t/040_upgrade.t: Fix number of tests if oldest installed PostgreSQL
    version is < 8.0.

 -- Martin Pitt <mpitt@debian.org>  Fri, 24 Nov 2006 21:01:30 +0100

postgresql-common (67) unstable; urgency=low

  *t/040_upgrade.t: Skip the user/group name clash test when there are only